--- a/.github/workflows/cmd.yml
+++ b/.github/workflows/cmd.yml
@@ -415,22 +415,22 @@ jobs:
             git config --global user.email "<>"
             git config --global pull.rebase false
 
-            # Configure the token in a more reliable way
-            git config --global http.https://github.com/.extraheader "AUTHORIZATION: basic $(echo -n "x-access-token:${{ steps.generate_token_commit.outputs.token }}" | base64)"
-
             # Remove any existing github remote
             git remote remove github 2>/dev/null || true
+            
+            # Also remove origin to prevent any confusion
+            git remote remove origin 2>/dev/null || true
 
             # Add the remote with the token
-            git remote add github "https://github.com/${{ needs.get-pr-branch.outputs.repo }}.git"
+            git remote add github "https://x-access-token:${{ steps.generate_token_commit.outputs.token }}@github.com/${{ needs.get-pr-branch.outputs.repo }}.git"
 
             push_changes() {
-              # Add retry logic with exponential backoff
-              for i in {1..3}; do
+              for i in 1 2 3; do
                 if git push github "HEAD:${{ needs.get-pr-branch.outputs.pr-branch }}"; then
                   return 0
                 fi
-                sleep $((2**$i))
+                sleep $(( i * 2 ))
+                echo "Push attempt $i failed, retrying in $(( i * 2 )) seconds..."
               done
               return 1
             }
@@ -442,7 +442,10 @@ jobs:
             # Attempt to push changes with retries
             if ! push_changes; then
               echo "Push failed, trying to rebase..."
-              git pull --rebase github "${{ needs.get-pr-branch.outputs.pr-branch }}"
+              # Fetch the latest changes from our authenticated remote
+              git fetch github "${{ needs.get-pr-branch.outputs.pr-branch }}"
+              # Rebase against the branch from our authenticated remote
+              git rebase "github/${{ needs.get-pr-branch.outputs.pr-branch }}"
               # After rebase, try pushing again with retries
               push_changes
             fi
