--- a/.github/workflows/misc-sync-templates.yml
+++ b/.github/workflows/misc-sync-templates.yml
@@ -51,8 +51,8 @@ jobs:
           run: |
             sudo apt-get update
             sudo apt-get install -y protobuf-compiler
-            cargo install --git https://github.com/chevdor/srtool-cli
-            cargo install --path substrate/bin/utils/chain-spec-builder
+            cargo install --git https://github.com/chevdor/srtool-cli --locked
+            cargo install --path substrate/bin/utils/chain-spec-builder --locked
             srtool pull
             
         - name: Build runtime and generate chain spec
