--- a/substrate/frame/bags-list/Cargo.toml
+++ b/substrate/frame/bags-list/Cargo.toml
@@ -28,8 +28,7 @@ sp-runtime = { workspace = true }
 
 # FRAME
 frame-election-provider-support = { workspace = true }
-frame-support = { workspace = true }
-frame-system = { workspace = true }
+frame = { workspace = true, features = ["runtime"]}
 
 # third party
 aquamarine = { workspace = true }
@@ -37,58 +36,38 @@ docify = { workspace = true }
 log = { workspace = true }
 
 # Optional imports for benchmarking
-frame-benchmarking = { optional = true, workspace = true }
 pallet-balances = { optional = true, workspace = true }
-sp-core = { optional = true, workspace = true }
-sp-io = { optional = true, workspace = true }
 sp-tracing = { optional = true, workspace = true }
 
 [dev-dependencies]
-frame-benchmarking = { workspace = true, default-features = true }
 frame-election-provider-support = { workspace = true, default-features = true }
 pallet-balances = { workspace = true, default-features = true }
-sp-core = { workspace = true, default-features = true }
-sp-io = { workspace = true, default-features = true }
 sp-tracing = { workspace = true, default-features = true }
 
 [features]
 default = ["std"]
 std = [
 	"codec/std",
-	"frame-benchmarking?/std",
+	"frame/std",
 	"frame-election-provider-support/std",
-	"frame-support/std",
-	"frame-system/std",
 	"log/std",
 	"pallet-balances?/std",
 	"scale-info/std",
-	"sp-core?/std",
-	"sp-io?/std",
-	"sp-runtime/std",
 	"sp-tracing?/std",
 ]
 runtime-benchmarks = [
-	"frame-benchmarking/runtime-benchmarks",
 	"frame-election-provider-support/runtime-benchmarks",
-	"frame-support/runtime-benchmarks",
-	"frame-system/runtime-benchmarks",
+	"frame/runtime-benchmarks",
 	"pallet-balances/runtime-benchmarks",
-	"sp-core",
-	"sp-io",
-	"sp-runtime/runtime-benchmarks",
 	"sp-tracing",
 ]
 fuzz = [
 	"frame-election-provider-support/fuzz",
 	"pallet-balances",
-	"sp-core",
-	"sp-io",
 	"sp-tracing",
 ]
 try-runtime = [
 	"frame-election-provider-support/try-runtime",
-	"frame-support/try-runtime",
-	"frame-system/try-runtime",
+	"frame/try-runtime",
 	"pallet-balances?/try-runtime",
-	"sp-runtime/try-runtime",
 ]
