--- a/substrate/frame/tx-pause/Cargo.toml
+++ b/substrate/frame/tx-pause/Cargo.toml
@@ -17,11 +17,11 @@ targets = ["x86_64-unknown-linux-gnu"]
 [dependencies]
 codec = { features = ["derive"], workspace = true }
 docify = { workspace = true }
-frame = { workspace = true, features = ["experimental", "runtime"] }
-scale-info = { features = ["derive"], workspace = true }
+frame = { workspace = true, features = ["runtime"] }
 pallet-balances = { optional = true, workspace = true }
 pallet-proxy = { optional = true, workspace = true }
 pallet-utility = { optional = true, workspace = true }
+scale-info = { features = ["derive"], workspace = true }
 
 [dev-dependencies]
 pallet-balances = { workspace = true, default-features = true }
