--- a/substrate/client/transaction-pool/Cargo.toml
+++ b/substrate/client/transaction-pool/Cargo.toml
@@ -45,6 +45,7 @@ tokio-stream = { workspace = true }
 anyhow = { workspace = true }
 array-bytes = { workspace = true, default-features = true }
 assert_matches = { workspace = true }
+async-trait = { workspace = true }
 cmd_lib = { workspace = true }
 criterion = { workspace = true, default-features = true }
 env_logger = { workspace = true }
