--- a/Cargo.toml
+++ b/Cargo.toml
@@ -740,6 +740,7 @@ cumulus-test-service = { path = "cumulus/test/service" }
 curve25519-dalek = { version = "4.1.3" }
 derivative = { version = "2.2.0", default-features = false }
 derive-syn-parse = { version = "0.2.0" }
+derive_builder = { version = "0.20.2", default-features = false }
 derive_more = { version = "0.99.17", default-features = false }
 digest = { version = "0.10.3", default-features = false }
 directories = { version = "5.0.1" }
