--- a/substrate/frame/paged-list/fuzzer/Cargo.toml
+++ b/substrate/frame/paged-list/fuzzer/Cargo.toml
@@ -18,7 +18,7 @@ path = "src/paged_list.rs"
 
 [dependencies]
 arbitrary = { workspace = true }
-frame = { workspace = true, features = ["experimental", "runtime"] }
+frame = { workspace = true, features = ["runtime"] }
 honggfuzz = { workspace = true }
 pallet-paged-list = { features = ["std"], workspace = true }
 
