--- a/substrate/frame/offences/Cargo.toml
+++ b/substrate/frame/offences/Cargo.toml
@@ -36,7 +36,7 @@ std = [
 ]
 runtime-benchmarks = [
 	"pallet-balances/runtime-benchmarks",
-	"frame/runtime-benchmarks"
+	"frame/runtime-benchmarks",
 ]
 try-runtime = [
 	"pallet-balances/try-runtime",
