--- a/bridges/snowbridge/primitives/router/Cargo.toml
+++ b/bridges/snowbridge/primitives/router/Cargo.toml
@@ -15,7 +15,7 @@ workspace = true
 codec = { workspace = true }
 log = { workspace = true }
 scale-info = { features = ["derive"], workspace = true }
-alloy-sol-types = { workspace = true }
+alloy-core = { workspace = true, features = ["sol-types"] }
 
 frame-support = { workspace = true }
 frame-system = { workspace = true }
@@ -37,7 +37,7 @@ hex-literal = { workspace = true, default-features = true }
 [features]
 default = ["std"]
 std = [
-	"alloy-sol-types/std",
+	"alloy-core/std",
 	"codec/std",
 	"frame-support/std",
 	"frame-system/std",
