--- a/cumulus/parachains/integration-tests/emulated/tests/bridges/bridge-hub-westend/Cargo.toml
+++ b/cumulus/parachains/integration-tests/emulated/tests/bridges/bridge-hub-westend/Cargo.toml
@@ -33,7 +33,7 @@ xcm-runtime-apis = { workspace = true }
 
 # Bridges
 pallet-bridge-messages = { workspace = true }
-pallet-xcm-bridge-hub = { workspace = true }
+pallet-xcm-bridge = { workspace = true }
 
 # Cumulus
 asset-hub-westend-runtime = { workspace = true }
