--- a/cumulus/parachains/integration-tests/emulated/common/Cargo.toml
+++ b/cumulus/parachains/integration-tests/emulated/common/Cargo.toml
@@ -48,4 +48,4 @@ bp-messages = { workspace = true, default-features = true }
 bp-xcm-bridge-hub = { workspace = true, default-features = true }
 bridge-runtime-common = { workspace = true, default-features = true }
 pallet-bridge-messages = { workspace = true, default-features = true }
-pallet-xcm-bridge-hub = { workspace = true, default-features = true }
+pallet-xcm-bridge = { workspace = true, default-features = true }
