--- a/cumulus/pallets/xcmp-queue/Cargo.toml
+++ b/cumulus/pallets/xcmp-queue/Cargo.toml
@@ -39,7 +39,7 @@ bounded-collections = { workspace = true }
 frame-benchmarking = { optional = true, workspace = true }
 
 # Bridges
-bp-xcm-bridge-hub = { optional = true, workspace = true }
+bp-xcm-bridge = { optional = true, workspace = true }
 
 [dev-dependencies]
 
@@ -55,7 +55,7 @@ cumulus-pallet-parachain-system = { workspace = true, default-features = true }
 default = ["std"]
 std = [
 	"bounded-collections/std",
-	"bp-xcm-bridge-hub?/std",
+	"bp-xcm-bridge?/std",
 	"codec/std",
 	"cumulus-primitives-core/std",
 	"frame-benchmarking?/std",
@@ -99,4 +99,4 @@ try-runtime = [
 	"polkadot-runtime-parachains/try-runtime",
 	"sp-runtime/try-runtime",
 ]
-bridging = ["bp-xcm-bridge-hub"]
+bridging = ["bp-xcm-bridge"]
