--- a/cumulus/parachains/integration-tests/emulated/common/Cargo.toml
+++ b/cumulus/parachains/integration-tests/emulated/common/Cargo.toml
@@ -45,7 +45,7 @@ xcm-emulator = { workspace = true, default-features = true }
 
 # Bridges
 bp-messages = { workspace = true, default-features = true }
-bp-xcm-bridge-hub = { workspace = true, default-features = true }
+bp-xcm-bridge = { workspace = true, default-features = true }
 bridge-runtime-common = { workspace = true, default-features = true }
 pallet-bridge-messages = { workspace = true, default-features = true }
 pallet-xcm-bridge = { workspace = true, default-features = true }
