--- a/bridges/chains/chain-asset-hub-rococo/Cargo.toml
+++ b/bridges/chains/chain-asset-hub-rococo/Cargo.toml
@@ -22,7 +22,7 @@ frame-support = { workspace = true }
 sp-core = { workspace = true }
 
 # Bridge Dependencies
-bp-xcm-bridge-hub-router = { workspace = true }
+bp-xcm-bridge-router = { workspace = true }
 
 # Polkadot dependencies
 xcm = { workspace = true }
@@ -30,7 +30,7 @@ xcm = { workspace = true }
 [features]
 default = ["std"]
 std = [
-	"bp-xcm-bridge-hub-router/std",
+	"bp-xcm-bridge-router/std",
 	"codec/std",
 	"frame-support/std",
 	"scale-info/std",
